# API2Trade.com-MetatraderAPI-Python-SDK

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  conftest.py  llms.txt  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml  workflow.yml
api2trade_sdk/: __init__.py  client.py  enums.py  exceptions.py  http.py  models.py  streaming.py
api2trade_sdk/resources/: __init__.py  accounts.py  history.py  market.py  orders.py
examples/: 01_connect_account.py  02_account_summary.py  03_place_trade.py  04_order_history.py  05_websocket_stream.py  06_prop_firm_monitor.py
tests/: __init__.py  test_exceptions.py  test_models.py  test_resources.py
