[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "api2trade-sdk"
version         = "1.0.0"
description     = "Official Python SDK for the API2Trade MetaTrader REST API"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.8"
authors         = [
  { name = "API2Trade", email = "support@api2trade.com" },
]
keywords = [
  "metatrader", "mt4", "mt5", "forex", "trading", "api",
  "rest", "sdk", "api2trade", "broker", "algorithmic-trading",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.28.0",
  "urllib3>=1.26.0",
]

[project.optional-dependencies]
streaming = [
  "websockets>=11.0",
]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "python-dotenv>=1.0",
  "websockets>=11.0",
]

[project.urls]
Homepage      = "https://www.api2trade.com/"
Documentation = "https://docs.metatraderapi.dev/docs"
Repository    = "https://github.com/api2trade/api2trade-python-sdk"
"Bug Tracker" = "https://github.com/api2trade/api2trade-python-sdk/issues"
Changelog     = "https://github.com/api2trade/api2trade-python-sdk/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["api2trade_sdk*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"

[tool.isort]
profile                   = "black"
known_third_party         = ["requests", "websockets"]
known_first_party         = ["api2trade_sdk"]
